welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:2: error: not found: value h
  h = 7
  ^Diagonal:3: error: not found: value h
  var nbDiag = h*2 -1
               ^Diagonal:9: error: not found: value h
  	if (d <=h){
                ^Diagonal:17: error: not found: value h
        setPos(h-i,i)
               ^